--- a/css/style.css
+++ b/css/style.css
@@ -290,12 +290,12 @@ h2 {
 
 #listas .img-youtube {
     list-style: none;
-    list-style-image: url("img/youtubelogo.png");
+    list-style-image: url("../img/youtubelogo.png");
 }
 
 #listas .img-azarquiel {
     list-style: none;
-    list-style-image: url("img/logoazarquiel.jpg");
+    list-style-image: url("../img/logoazarquiel.jpg");
 }
 
 #horario {
